# TiO2-experiments

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: build-report.yml
degradation_pipeline/: pyproject.toml  run_custom.py
degradation_pipeline/src/degradation_pipeline/: __init__.py  __main__.py  kinetics.py
degradation_pipeline/tests/: __init__.py
docs/: SEM_report.md  XRD_report.md  build_report.py  full_report.typ  full_report.typ.bak
docs/refs/: TiO2-[tI12].cif  (+2 more)
sem_analysis/: pyproject.toml
sem_analysis/src/sem_analysis/: __init__.py  annotator.py  config.py  export.py  filter.py  homography.py  measure.py  preprocess.py  scale_bar.py  segment.py  stats.py  train_scorer.py  visualize.py
sem_pipeline/: pyproject.toml
sem_pipeline/src/sem_pipeline/: __init__.py  __main__.py  annotate.py  config.py  crop.py  cumulative.py  feret.py  histogram.py  pipeline.py
sem_pipeline/tests/: __init__.py  test_homography.py
sem_pipeline/tools/: calib_bar.py  manual_pipeline_14_16.py  optimize.py  scalebar_debug.py  viewer.py
xrd_pipeline/: pyproject.toml
xrd_pipeline/data/: C2-1#1##20260714-132133_100.mdi  C2-1#1##20260714-132133_100.txt  d5#1##20260715-140210_100.mdi  d5#1##20260715-140210_100.txt  d6#1##20260715-141301_100.mdi  d6#1##20260715-141301_100.txt  di4zu#1##20260715-135307_100.mdi  di4zu#1##20260715-135307_100.txt  sample_01#1##20260715-132326_100.mdi  sample_01#1##20260715-132326_100.txt  sample_02#1##20260715-133415_100.mdi  sample_02#1##20260715-133415_100.txt  sample_03#1##20260715-134336_100.mdi  sample_03#1##20260715-134336_100.txt
xrd_pipeline/src/xrd_pipeline/: __init__.py  __main__.py  config.py  data.py  plotting.py  processing.py  simulation.py
xrd_pipeline/tests/: __init__.py
xrd_pipeline/tools/: inner_product_ratio.py  simulate_ref.py
