[project]
name = "degradation-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv]
package = true

[project.scripts]
degradation-pipeline = "degradation_pipeline.__main__:main"
