[project]
name = "sem-analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=4.11.0",
    "pandas>=2.3.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
