[project]
name = "sem-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sem-analysis",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=4.11.0",
    "pandas>=2.3.0",
    "scipy>=1.18.0",
]

[tool.uv.sources]
sem-analysis = { path = "../sem_analysis", editable = true }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv]
package = true

[project.scripts]
sem-pipeline = "sem_pipeline.__main__:main"
